--- a/final_project/tables/balanced_diameter_5.tex
+++ b/final_project/tables/balanced_diameter_5.tex
@@ -1,22 +1,25 @@
 \begin{tabular}{lrrrrrrrrrrrrrrrrl}
- & \multicolumn{8}{r}{caught_proportion} & \multicolumn{8}{r}{eigen_proportion} & unfinished \\
- & \multicolumn{2}{r}{0.250000} & \multicolumn{2}{r}{0.500000} & \multicolumn{2}{r}{0.750000} & \multicolumn{2}{r}{1.000000} & \multicolumn{2}{r}{0.250000} & \multicolumn{2}{r}{0.500000} & \multicolumn{2}{r}{0.750000} & \multicolumn{2}{r}{1.000000} &  \\
- & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std &  \\
-group &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\
-17N & 30 & 13.900000 & 47 & 16.400000 & 77 & 20.700000 & 109 & 25.900000 & 26 & 15.200000 & 39 & 17.400000 & 54 & 18.200000 & 109 & 25.900000 & 0.000000 \\
-9/11 Hijackers & 102 & 26.100000 & 190 & 30.200000 & 291 & 36.500000 & 417 & 47.900000 & 77 & 41.800000 & 95 & 45.500000 & 146 & 36.000000 & 417 & 47.900000 & 0.000000 \\
-ISIL & 57 & 21.200000 & 115 & 31.500000 & 173 & 37.200000 & 231 & 45.200000 & 34 & 18.500000 & 63 & 24.400000 & 143 & 35.200000 & 231 & 45.200000 & 0.000000 \\
-Al Qaeda & 174 & 30.800000 & 374 & 44.200000 & 548 & 51.000000 & 819 & 72.100000 & 275 & 178.600000 & 384 & 187.000000 & 397 & 185.800000 & 819 & 72.100000 & 0.000000 \\
-Operation Acero & 52 & 15.700000 & 89 & 20.400000 & 142 & 28.200000 & 207 & 38.800000 & 34 & 15.100000 & 59 & 18.400000 & 92 & 20.200000 & 207 & 38.800000 & 0.000000 \\
-Operation Jake & 69 & 23.000000 & 140 & 31.000000 & 240 & 43.300000 & 331 & 53.700000 & 45 & 27.200000 & 64 & 27.700000 & 153 & 34.800000 & 331 & 53.700000 & 0.000000 \\
-Operation Juanes & 82 & 25.900000 & 160 & 31.200000 & 264 & 39.300000 & 382 & 53.800000 & 62 & 39.900000 & 86 & 42.300000 & 120 & 40.300000 & 382 & 53.800000 & 0.000000 \\
-Operation Mambo & 51 & 18.900000 & 95 & 23.600000 & 155 & 30.400000 & 223 & 41.100000 & 37 & 21.000000 & 63 & 22.500000 & 95 & 25.300000 & 223 & 41.100000 & 0.000000 \\
-Heroin Natarjan & 63 & 19.900000 & 108 & 25.200000 & 163 & 30.900000 & 237 & 39.700000 & 47 & 20.200000 & 80 & 23.200000 & 121 & 27.000000 & 237 & 39.700000 & 0.000000 \\
-Italian Gangs & 108 & 26.700000 & 209 & 34.900000 & 342 & 46.900000 & 504 & 59.400000 & 62 & 29.200000 & 134 & 35.600000 & 221 & 37.600000 & 504 & 59.400000 & 0.000000 \\
-London Gangs & 53 & 15.700000 & 77 & 16.200000 & 119 & 18.600000 & 189 & 25.800000 & 42 & 16.300000 & 57 & 17.200000 & 73 & 16.900000 & 189 & 25.800000 & 0.000000 \\
-Mali Terrorists & 57 & 19.100000 & 124 & 27.400000 & 183 & 32.900000 & 280 & 46.200000 & 52 & 26.800000 & 92 & 48.900000 & 130 & 36.800000 & 280 & 46.200000 & 0.000000 \\
-Montagna Operation & 138 & 19.100000 & 299 & 34.400000 & 566 & 63.800000 & 912 & 49.500000 & 70 & 35.400000 & 118 & 25.000000 & 228 & 27.100000 & 912 & 49.500000 & 0.000000 \\
-Ndrangheta & 81 & 17.000000 & 130 & 15.600000 & 209 & 17.600000 & 329 & 26.400000 & 61 & 19.400000 & 82 & 19.200000 & 107 & 18.200000 & 329 & 26.400000 & 0.000000 \\
-Malasyian Extremists & 60 & 13.700000 & 92 & 13.200000 & 132 & 14.300000 & 227 & 25.700000 & 50 & 16.100000 & 70 & 15.800000 & 92 & 14.700000 & 227 & 25.700000 & 0.000000 \\
-Project Togo & 65 & 22.000000 & 129 & 30.900000 & 201 & 40.000000 & 280 & 48.100000 & 36 & 19.500000 & 89 & 28.700000 & 160 & 35.600000 & 280 & 48.100000 & 0.000000 \\
+\toprule
+{} & \multicolumn{8}{l}{caught\_proportion} & \multicolumn{8}{l}{eigen\_proportion} & unfinished \\
+{} & \multicolumn{2}{l}{0.25} & \multicolumn{2}{l}{0.5} & \multicolumn{2}{l}{0.75} & \multicolumn{2}{l}{1.0} & \multicolumn{2}{l}{0.25} & \multicolumn{2}{l}{0.5} & \multicolumn{2}{l}{0.75} & \multicolumn{3}{l}{1.0} \\
+{} &              mean &   std & mean &   std & mean &   std & mean &   std &             mean &    std & mean &    std & mean &    std & mean & \multicolumn{2}{l}{std} \\
+group                &                   &       &      &       &      &       &      &       &                  &        &      &        &      &        &      &       &            \\
+\midrule
+17N                  &                30 &  13.9 &   47 &  16.4 &   77 &  20.7 &  109 &  25.9 &               26 &   15.2 &   39 &   17.4 &   54 &   18.2 &  109 &  25.9 &        0.0 \\
+9/11 Hijackers       &               102 &  26.1 &  190 &  30.2 &  291 &  36.5 &  417 &  47.9 &               77 &   41.8 &   95 &   45.5 &  146 &   36.0 &  417 &  47.9 &        0.0 \\
+ISIL                 &                57 &  21.2 &  115 &  31.5 &  173 &  37.2 &  231 &  45.2 &               34 &   18.5 &   63 &   24.4 &  143 &   35.2 &  231 &  45.2 &        0.0 \\
+Al Qaeda             &               175 &  30.8 &  375 &  45.2 &  549 &  52.7 &  819 &  72.1 &              277 &  179.1 &  386 &  186.6 &  399 &  185.4 &  819 &  72.1 &        0.2 \\
+Operation Acero      &                52 &  15.7 &   89 &  20.4 &  142 &  28.2 &  207 &  38.8 &               34 &   15.1 &   59 &   18.4 &   92 &   20.2 &  207 &  38.8 &        0.0 \\
+Operation Jake       &                69 &  23.0 &  140 &  31.0 &  240 &  43.3 &  331 &  53.7 &               45 &   27.2 &   64 &   27.7 &  153 &   34.8 &  331 &  53.7 &        0.0 \\
+Operation Juanes     &                82 &  25.9 &  160 &  31.2 &  264 &  39.3 &  382 &  53.8 &               62 &   39.9 &   86 &   42.3 &  120 &   40.3 &  382 &  53.8 &        0.0 \\
+Operation Mambo      &                51 &  18.9 &   95 &  23.6 &  155 &  30.4 &  223 &  41.1 &               37 &   21.0 &   63 &   22.5 &   95 &   25.3 &  223 &  41.1 &        0.0 \\
+Heroin Natarjan      &                63 &  19.9 &  108 &  25.2 &  163 &  30.9 &  237 &  39.7 &               47 &   20.2 &   80 &   23.2 &  121 &   27.0 &  237 &  39.7 &        0.0 \\
+Italian Gangs        &               108 &  26.7 &  209 &  34.9 &  342 &  46.9 &  504 &  59.4 &               62 &   29.2 &  134 &   35.6 &  221 &   37.6 &  504 &  59.4 &        0.0 \\
+London Gangs         &                53 &  15.7 &   77 &  16.2 &  119 &  18.6 &  189 &  25.8 &               42 &   16.3 &   57 &   17.2 &   73 &   16.9 &  189 &  25.8 &        0.0 \\
+Mali Terrorists      &                57 &  19.1 &  124 &  27.4 &  183 &  32.9 &  280 &  46.2 &               52 &   26.8 &   92 &   48.9 &  130 &   36.8 &  280 &  46.2 &        0.0 \\
+Montagna Operation   &               148 &  21.7 &  315 &  36.5 &  607 &  81.5 &  912 &  49.5 &               83 &   34.3 &  125 &   22.3 &  243 &   34.2 &  912 &  49.5 &        0.4 \\
+Ndrangheta           &                81 &  17.0 &  130 &  15.6 &  209 &  17.6 &  329 &  26.4 &               61 &   19.4 &   82 &   19.2 &  107 &   18.2 &  329 &  26.4 &        0.0 \\
+Malasyian Extremists &                60 &  13.7 &   92 &  13.2 &  132 &  14.3 &  227 &  25.7 &               50 &   16.1 &   70 &   15.8 &   92 &   14.7 &  227 &  25.7 &        0.0 \\
+Project Togo         &                65 &  22.0 &  129 &  30.9 &  201 &  40.0 &  280 &  48.1 &               36 &   19.5 &   89 &   28.7 &  160 &   35.6 &  280 &  48.1 &        0.0 \\
+\bottomrule
 \end{tabular}
