--- a/final_project/tables/balanced_diameter_7.tex
+++ b/final_project/tables/balanced_diameter_7.tex
@@ -1,22 +1,25 @@
 \begin{tabular}{lrrrrrrrrrrrrrrrrl}
- & \multicolumn{8}{r}{caught_proportion} & \multicolumn{8}{r}{eigen_proportion} & unfinished \\
- & \multicolumn{2}{r}{0.250000} & \multicolumn{2}{r}{0.500000} & \multicolumn{2}{r}{0.750000} & \multicolumn{2}{r}{1.000000} & \multicolumn{2}{r}{0.250000} & \multicolumn{2}{r}{0.500000} & \multicolumn{2}{r}{0.750000} & \multicolumn{2}{r}{1.000000} &  \\
- & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std &  \\
-group &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\
-17N & 33 & 16.000000 & 49 & 18.300000 & 77 & 21.900000 & 110 & 27.900000 & 31 & 16.600000 & 42 & 18.700000 & 55 & 19.500000 & 110 & 27.900000 & 0.000000 \\
-9/11 Hijackers & 113 & 31.900000 & 199 & 35.300000 & 297 & 42.600000 & 426 & 54.200000 & 92 & 41.000000 & 117 & 47.000000 & 167 & 46.300000 & 426 & 54.200000 & 0.000000 \\
-ISIL & 58 & 23.800000 & 114 & 33.700000 & 175 & 39.300000 & 235 & 45.800000 & 34 & 20.000000 & 65 & 28.100000 & 142 & 37.600000 & 235 & 45.800000 & 0.000000 \\
-Al Qaeda & 191 & 35.000000 & 398 & 54.700000 & 565 & 59.700000 & 826 & 73.400000 & 316 & 183.600000 & 405 & 188.500000 & 417 & 187.700000 & 826 & 73.400000 & 0.000000 \\
-Operation Acero & 53 & 21.700000 & 93 & 26.300000 & 145 & 31.700000 & 207 & 42.500000 & 33 & 17.100000 & 65 & 24.200000 & 100 & 26.800000 & 207 & 42.500000 & 0.000000 \\
-Operation Jake & 71 & 22.800000 & 144 & 32.500000 & 241 & 43.700000 & 333 & 52.500000 & 49 & 25.800000 & 72 & 31.700000 & 156 & 35.200000 & 333 & 52.500000 & 0.000000 \\
-Operation Juanes & 100 & 27.900000 & 177 & 32.400000 & 280 & 41.800000 & 390 & 48.200000 & 75 & 36.600000 & 111 & 37.500000 & 147 & 35.600000 & 390 & 48.200000 & 0.000000 \\
-Operation Mambo & 61 & 23.100000 & 109 & 29.600000 & 166 & 33.800000 & 237 & 40.500000 & 49 & 23.100000 & 81 & 30.900000 & 117 & 34.700000 & 237 & 40.500000 & 0.000000 \\
-Heroin Natarjan & 75 & 24.500000 & 123 & 31.700000 & 177 & 35.500000 & 249 & 41.300000 & 61 & 24.100000 & 107 & 37.000000 & 145 & 41.900000 & 249 & 41.300000 & 0.000000 \\
-Italian Gangs & 117 & 28.100000 & 221 & 38.000000 & 355 & 49.200000 & 514 & 64.000000 & 76 & 33.800000 & 148 & 37.000000 & 235 & 39.900000 & 514 & 64.000000 & 0.000000 \\
-London Gangs & 82 & 30.100000 & 106 & 31.900000 & 146 & 31.300000 & 213 & 34.700000 & 77 & 32.600000 & 92 & 34.900000 & 106 & 33.700000 & 213 & 34.700000 & 0.000000 \\
-Mali Terrorists & 64 & 22.900000 & 127 & 30.100000 & 184 & 34.400000 & 270 & 44.800000 & 63 & 30.300000 & 105 & 47.300000 & 141 & 42.900000 & 270 & 44.800000 & 0.000000 \\
-Montagna Operation & 157 & 35.500000 & 342 & 38.500000 & 598 & 34.700000 & 906 & 35.600000 & 105 & 28.200000 & 146 & 37.500000 & 266 & 48.700000 & 906 & 35.600000 & 0.000000 \\
-Ndrangheta & 104 & 13.200000 & 149 & 14.500000 & 222 & 20.000000 & 349 & 40.700000 & 88 & 17.300000 & 107 & 17.600000 & 130 & 17.200000 & 349 & 40.700000 & 0.000000 \\
-Malasyian Extremists & 101 & 31.800000 & 131 & 31.700000 & 167 & 30.800000 & 261 & 35.500000 & 96 & 34.000000 & 113 & 33.600000 & 135 & 32.600000 & 261 & 35.500000 & 0.000000 \\
-Project Togo & 68 & 23.400000 & 131 & 31.900000 & 201 & 40.500000 & 277 & 47.300000 & 42 & 22.400000 & 94 & 30.100000 & 165 & 41.200000 & 277 & 47.300000 & 0.000000 \\
+\toprule
+{} & \multicolumn{8}{l}{caught\_proportion} & \multicolumn{8}{l}{eigen\_proportion} & unfinished \\
+{} & \multicolumn{2}{l}{0.25} & \multicolumn{2}{l}{0.5} & \multicolumn{2}{l}{0.75} & \multicolumn{2}{l}{1.0} & \multicolumn{2}{l}{0.25} & \multicolumn{2}{l}{0.5} & \multicolumn{2}{l}{0.75} & \multicolumn{3}{l}{1.0} \\
+{} &              mean &   std & mean &   std & mean &   std & mean &   std &             mean &    std & mean &    std & mean &    std & mean & \multicolumn{2}{l}{std} \\
+group                &                   &       &      &       &      &       &      &       &                  &        &      &        &      &        &      &       &            \\
+\midrule
+17N                  &                33 &  16.0 &   49 &  18.3 &   77 &  21.9 &  110 &  27.9 &               31 &   16.6 &   42 &   18.7 &   55 &   19.5 &  110 &  27.9 &        0.0 \\
+9/11 Hijackers       &               113 &  31.9 &  199 &  35.3 &  297 &  42.6 &  426 &  54.2 &               92 &   41.0 &  117 &   47.0 &  167 &   46.3 &  426 &  54.2 &        0.0 \\
+ISIL                 &                58 &  23.8 &  114 &  33.7 &  175 &  39.3 &  235 &  45.8 &               34 &   20.0 &   65 &   28.1 &  142 &   37.6 &  235 &  45.8 &        0.0 \\
+Al Qaeda             &               191 &  35.0 &  398 &  54.7 &  565 &  59.7 &  826 &  73.4 &              316 &  183.6 &  405 &  188.5 &  417 &  187.7 &  826 &  73.4 &        0.0 \\
+Operation Acero      &                53 &  21.7 &   93 &  26.3 &  145 &  31.7 &  207 &  42.5 &               33 &   17.1 &   65 &   24.2 &  100 &   26.8 &  207 &  42.5 &        0.0 \\
+Operation Jake       &                71 &  22.8 &  144 &  32.5 &  241 &  43.7 &  333 &  52.5 &               49 &   25.8 &   72 &   31.7 &  156 &   35.2 &  333 &  52.5 &        0.0 \\
+Operation Juanes     &               100 &  27.9 &  177 &  32.4 &  280 &  41.8 &  390 &  48.2 &               75 &   36.6 &  111 &   37.5 &  147 &   35.6 &  390 &  48.2 &        0.0 \\
+Operation Mambo      &                61 &  23.1 &  109 &  29.6 &  166 &  33.8 &  237 &  40.5 &               49 &   23.1 &   81 &   30.9 &  117 &   34.7 &  237 &  40.5 &        0.0 \\
+Heroin Natarjan      &                75 &  24.5 &  123 &  31.7 &  177 &  35.5 &  249 &  41.3 &               61 &   24.1 &  107 &   37.0 &  145 &   41.9 &  249 &  41.3 &        0.0 \\
+Italian Gangs        &               117 &  28.1 &  221 &  38.0 &  355 &  49.2 &  514 &  64.0 &               76 &   33.8 &  148 &   37.0 &  235 &   39.9 &  514 &  64.0 &        0.0 \\
+London Gangs         &                82 &  30.1 &  106 &  31.9 &  146 &  31.3 &  213 &  34.7 &               77 &   32.6 &   92 &   34.9 &  106 &   33.7 &  213 &  34.7 &        0.0 \\
+Mali Terrorists      &                64 &  22.9 &  127 &  30.1 &  184 &  34.4 &  270 &  44.8 &               63 &   30.3 &  105 &   47.3 &  141 &   42.9 &  270 &  44.8 &        0.0 \\
+Montagna Operation   &               156 &  31.9 &  334 &  39.7 &  602 &  32.6 &  906 &  35.6 &               97 &   31.5 &  142 &   35.2 &  260 &   45.6 &  906 &  35.6 &        0.2 \\
+Ndrangheta           &               104 &  13.2 &  149 &  14.5 &  222 &  20.0 &  349 &  40.7 &               88 &   17.3 &  107 &   17.6 &  130 &   17.2 &  349 &  40.7 &        0.0 \\
+Malasyian Extremists &               101 &  31.8 &  131 &  31.7 &  167 &  30.8 &  261 &  35.5 &               96 &   34.0 &  113 &   33.6 &  135 &   32.6 &  261 &  35.5 &        0.0 \\
+Project Togo         &                68 &  23.4 &  131 &  31.9 &  201 &  40.5 &  277 &  47.3 &               42 &   22.4 &   94 &   30.1 &  165 &   41.2 &  277 &  47.3 &        0.0 \\
+\bottomrule
 \end{tabular}
