--- a/final_project/tables/balanced_diameter_9.tex
+++ b/final_project/tables/balanced_diameter_9.tex
@@ -1,21 +1,24 @@
 \begin{tabular}{lrrrrrrrrrrrrrrrrl}
- & \multicolumn{8}{r}{caught_proportion} & \multicolumn{8}{r}{eigen_proportion} & unfinished \\
- & \multicolumn{2}{r}{0.250000} & \multicolumn{2}{r}{0.500000} & \multicolumn{2}{r}{0.750000} & \multicolumn{2}{r}{1.000000} & \multicolumn{2}{r}{0.250000} & \multicolumn{2}{r}{0.500000} & \multicolumn{2}{r}{0.750000} & \multicolumn{2}{r}{1.000000} &  \\
- & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std &  \\
-group &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\
-17N & 32 & 16.000000 & 49 & 19.200000 & 75 & 21.900000 & 107 & 28.200000 & 29 & 16.300000 & 41 & 18.900000 & 58 & 21.400000 & 107 & 28.200000 & 0.000000 \\
-9/11 Hijackers & 115 & 30.200000 & 213 & 38.200000 & 313 & 47.100000 & 440 & 55.600000 & 92 & 44.200000 & 129 & 57.900000 & 199 & 71.300000 & 440 & 55.600000 & 0.000000 \\
-ISIL & 58 & 21.000000 & 117 & 32.700000 & 178 & 42.000000 & 237 & 48.500000 & 34 & 18.200000 & 64 & 24.300000 & 146 & 38.200000 & 237 & 48.500000 & 0.000000 \\
-Al Qaeda & 196 & 38.700000 & 400 & 55.400000 & 576 & 63.800000 & 823 & 74.100000 & 309 & 190.400000 & 416 & 204.200000 & 442 & 198.200000 & 823 & 74.100000 & 0.000000 \\
-Caviar & 146 & 27.900000 & 321 & 76.400000 & 582 & 73.600000 & 865 & 68.500000 & 74 & 34.100000 & 173 & 138.100000 & 330 & 129.100000 & 865 & 68.500000 & 0.000000 \\
-Operation Acero & 52 & 19.800000 & 93 & 25.200000 & 149 & 35.800000 & 211 & 39.500000 & 32 & 16.800000 & 67 & 24.100000 & 111 & 37.300000 & 211 & 39.500000 & 0.000000 \\
-Operation Jake & 75 & 26.400000 & 158 & 39.900000 & 258 & 52.400000 & 348 & 61.300000 & 52 & 30.900000 & 85 & 48.700000 & 196 & 69.100000 & 348 & 61.300000 & 0.000000 \\
-Operation Juanes & 96 & 30.300000 & 182 & 41.000000 & 288 & 53.900000 & 397 & 65.200000 & 73 & 38.600000 & 113 & 42.900000 & 179 & 80.900000 & 397 & 65.200000 & 0.000000 \\
-Operation Mambo & 61 & 23.300000 & 114 & 33.200000 & 180 & 45.300000 & 242 & 49.800000 & 51 & 24.600000 & 93 & 39.700000 & 156 & 73.100000 & 242 & 49.800000 & 0.000000 \\
-Heroin Natarjan & 82 & 28.000000 & 140 & 36.700000 & 210 & 46.100000 & 272 & 47.700000 & 68 & 27.500000 & 128 & 42.100000 & 198 & 56.000000 & 272 & 47.700000 & 0.000000 \\
-Italian Gangs & 118 & 32.100000 & 223 & 42.200000 & 351 & 50.600000 & 508 & 63.000000 & 80 & 41.800000 & 155 & 48.500000 & 245 & 55.400000 & 508 & 63.000000 & 0.000000 \\
-London Gangs & 85 & 29.300000 & 128 & 42.000000 & 166 & 45.800000 & 225 & 41.900000 & 79 & 31.800000 & 120 & 58.400000 & 141 & 57.600000 & 225 & 41.900000 & 0.000000 \\
-Mali Terrorists & 65 & 23.700000 & 127 & 31.000000 & 188 & 36.700000 & 276 & 46.700000 & 63 & 33.200000 & 102 & 45.600000 & 144 & 42.000000 & 276 & 46.700000 & 0.000000 \\
-Malasyian Extremists & 103 & 25.800000 & 168 & 57.900000 & 209 & 57.900000 & 291 & 46.400000 & 95 & 24.600000 & 155 & 73.700000 & 183 & 72.200000 & 291 & 46.400000 & 0.000000 \\
-Project Togo & 68 & 24.000000 & 133 & 32.100000 & 203 & 40.400000 & 275 & 46.000000 & 42 & 21.700000 & 97 & 31.400000 & 168 & 40.700000 & 275 & 46.000000 & 0.000000 \\
+\toprule
+{} & \multicolumn{8}{l}{caught\_proportion} & \multicolumn{8}{l}{eigen\_proportion} & unfinished \\
+{} & \multicolumn{2}{l}{0.25} & \multicolumn{2}{l}{0.5} & \multicolumn{2}{l}{0.75} & \multicolumn{2}{l}{1.0} & \multicolumn{2}{l}{0.25} & \multicolumn{2}{l}{0.5} & \multicolumn{2}{l}{0.75} & \multicolumn{3}{l}{1.0} \\
+{} &              mean &   std & mean &   std & mean &   std & mean &   std &             mean &    std & mean &    std & mean &    std & mean & \multicolumn{2}{l}{std} \\
+group                &                   &       &      &       &      &       &      &       &                  &        &      &        &      &        &      &       &            \\
+\midrule
+17N                  &                32 &  16.0 &   49 &  19.2 &   75 &  21.9 &  107 &  28.2 &               29 &   16.3 &   41 &   18.9 &   58 &   21.4 &  107 &  28.2 &        0.0 \\
+9/11 Hijackers       &               115 &  30.2 &  213 &  38.2 &  313 &  47.1 &  440 &  55.6 &               92 &   44.2 &  129 &   57.9 &  199 &   71.3 &  440 &  55.6 &        0.0 \\
+ISIL                 &                58 &  21.0 &  117 &  32.7 &  178 &  42.0 &  237 &  48.5 &               34 &   18.2 &   64 &   24.3 &  146 &   38.2 &  237 &  48.5 &        0.0 \\
+Al Qaeda             &               196 &  38.3 &  402 &  56.9 &  579 &  66.3 &  823 &  74.1 &              316 &  193.8 &  421 &  204.7 &  447 &  198.5 &  823 &  74.1 &        0.2 \\
+Caviar               &               158 &  48.3 &  339 &  93.0 &  602 &  94.6 &  865 &  68.5 &               88 &   56.5 &  201 &  159.6 &  363 &  166.2 &  865 &  68.5 &        0.4 \\
+Operation Acero      &                52 &  19.8 &   93 &  25.2 &  149 &  35.8 &  211 &  39.5 &               32 &   16.8 &   67 &   24.1 &  111 &   37.3 &  211 &  39.5 &        0.0 \\
+Operation Jake       &                75 &  26.4 &  158 &  39.9 &  258 &  52.4 &  348 &  61.3 &               52 &   30.9 &   85 &   48.7 &  196 &   69.1 &  348 &  61.3 &        0.0 \\
+Operation Juanes     &                96 &  30.3 &  182 &  41.0 &  288 &  53.9 &  397 &  65.2 &               73 &   38.6 &  113 &   42.9 &  179 &   80.9 &  397 &  65.2 &        0.0 \\
+Operation Mambo      &                61 &  23.3 &  114 &  33.2 &  180 &  45.3 &  242 &  49.8 &               51 &   24.6 &   93 &   39.7 &  156 &   73.1 &  242 &  49.8 &        0.0 \\
+Heroin Natarjan      &                82 &  28.0 &  140 &  36.7 &  210 &  46.1 &  272 &  47.7 &               68 &   27.5 &  128 &   42.1 &  198 &   56.0 &  272 &  47.7 &        0.0 \\
+Italian Gangs        &               118 &  32.1 &  223 &  42.2 &  351 &  50.6 &  508 &  63.0 &               80 &   41.8 &  155 &   48.5 &  245 &   55.4 &  508 &  63.0 &        0.0 \\
+London Gangs         &                85 &  29.3 &  128 &  42.0 &  166 &  45.8 &  225 &  41.9 &               79 &   31.8 &  120 &   58.4 &  141 &   57.6 &  225 &  41.9 &        0.0 \\
+Mali Terrorists      &                65 &  23.7 &  127 &  31.0 &  188 &  36.7 &  276 &  46.7 &               63 &   33.2 &  102 &   45.6 &  144 &   42.0 &  276 &  46.7 &        0.0 \\
+Malasyian Extremists &               103 &  25.8 &  168 &  57.9 &  209 &  57.9 &  291 &  46.4 &               95 &   24.6 &  155 &   73.7 &  183 &   72.2 &  291 &  46.4 &        0.0 \\
+Project Togo         &                68 &  24.0 &  133 &  32.1 &  203 &  40.4 &  275 &  46.0 &               42 &   21.7 &   97 &   31.4 &  168 &   40.7 &  275 &  46.0 &        0.0 \\
+\bottomrule
 \end{tabular}
