--- a/final_project/tables/greedy_eigenvector.tex
+++ b/final_project/tables/greedy_eigenvector.tex
@@ -1,23 +1,26 @@
 \begin{tabular}{lrrrrrrrrrrrrrrrrl}
- & \multicolumn{8}{r}{caught_proportion} & \multicolumn{8}{r}{eigen_proportion} & unfinished \\
- & \multicolumn{2}{r}{0.250000} & \multicolumn{2}{r}{0.500000} & \multicolumn{2}{r}{0.750000} & \multicolumn{2}{r}{1.000000} & \multicolumn{2}{r}{0.250000} & \multicolumn{2}{r}{0.500000} & \multicolumn{2}{r}{0.750000} & \multicolumn{2}{r}{1.000000} &  \\
- & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std &  \\
-group &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\
-17N & 28 & 13.300000 & 45 & 15.400000 & 75 & 20.700000 & 106 & 26.000000 & 23 & 14.500000 & 36 & 16.000000 & 51 & 16.900000 & 106 & 26.000000 & 0.000000 \\
-9/11 Hijackers & 104 & 29.100000 & 189 & 36.500000 & 296 & 43.500000 & 413 & 55.000000 & 94 & 56.600000 & 111 & 55.800000 & 149 & 55.400000 & 413 & 55.000000 & 0.000000 \\
-ISIL & 53 & 21.000000 & 108 & 29.800000 & 166 & 37.000000 & 223 & 44.000000 & 31 & 18.600000 & 53 & 21.900000 & 114 & 31.500000 & 223 & 44.000000 & 0.000000 \\
-Al Qaeda & 176 & 30.000000 & 396 & 49.700000 & 574 & 61.700000 & 816 & 71.400000 & 304 & 215.500000 & 431 & 241.000000 & 444 & 237.700000 & 816 & 71.400000 & 0.000000 \\
-Caviar & 137 & 25.000000 & 300 & 37.900000 & 575 & 58.800000 & 848 & 71.500000 & 52 & 18.600000 & 119 & 23.800000 & 257 & 35.300000 & 848 & 71.500000 & 0.000000 \\
-Operation Acero & 47 & 18.200000 & 83 & 23.200000 & 139 & 30.500000 & 203 & 39.800000 & 29 & 17.300000 & 52 & 20.400000 & 79 & 23.700000 & 203 & 39.800000 & 0.000000 \\
-Operation Jake & 68 & 23.500000 & 143 & 33.800000 & 246 & 47.100000 & 336 & 55.800000 & 41 & 26.800000 & 59 & 27.700000 & 141 & 35.500000 & 336 & 55.800000 & 0.000000 \\
-Operation Juanes & 82 & 25.500000 & 161 & 31.300000 & 268 & 42.400000 & 389 & 51.400000 & 57 & 34.700000 & 82 & 36.800000 & 117 & 36.800000 & 389 & 51.400000 & 0.000000 \\
-Operation Mambo & 48 & 18.000000 & 92 & 22.500000 & 157 & 30.600000 & 229 & 41.500000 & 33 & 18.700000 & 58 & 21.600000 & 88 & 23.200000 & 229 & 41.500000 & 0.000000 \\
-Heroin Natarjan & 58 & 18.400000 & 102 & 22.700000 & 157 & 27.900000 & 235 & 37.300000 & 42 & 18.900000 & 75 & 22.200000 & 112 & 23.500000 & 235 & 37.300000 & 0.000000 \\
-Italian Gangs & 103 & 25.600000 & 201 & 33.600000 & 343 & 50.000000 & 501 & 62.100000 & 49 & 21.300000 & 126 & 31.800000 & 197 & 33.900000 & 501 & 62.100000 & 0.000000 \\
-London Gangs & 53 & 16.000000 & 78 & 16.600000 & 119 & 17.800000 & 190 & 24.500000 & 42 & 16.300000 & 57 & 17.000000 & 74 & 16.900000 & 190 & 24.500000 & 0.000000 \\
-Mali Terrorists & 52 & 18.400000 & 123 & 30.600000 & 177 & 34.400000 & 267 & 45.600000 & 47 & 24.100000 & 102 & 56.500000 & 139 & 44.000000 & 267 & 45.600000 & 0.000000 \\
-Montagna Operation & 153 & 24.800000 & 325 & 35.000000 & 592 & 48.200000 & 906 & 57.400000 & 71 & 29.500000 & 123 & 27.400000 & 233 & 30.200000 & 906 & 57.400000 & 0.000000 \\
-Ndrangheta & 84 & 17.900000 & 131 & 17.300000 & 208 & 18.500000 & 331 & 25.500000 & 68 & 23.000000 & 88 & 22.800000 & 112 & 22.100000 & 331 & 25.500000 & 0.000000 \\
-Malasyian Extremists & 61 & 15.700000 & 93 & 16.400000 & 133 & 17.000000 & 233 & 31.300000 & 52 & 17.800000 & 71 & 17.600000 & 93 & 17.700000 & 233 & 31.300000 & 0.000000 \\
-Project Togo & 61 & 20.500000 & 124 & 28.600000 & 201 & 39.400000 & 274 & 46.400000 & 31 & 17.300000 & 77 & 23.800000 & 136 & 29.800000 & 274 & 46.400000 & 0.000000 \\
+\toprule
+{} & \multicolumn{8}{l}{caught\_proportion} & \multicolumn{8}{l}{eigen\_proportion} & unfinished \\
+{} & \multicolumn{2}{l}{0.25} & \multicolumn{2}{l}{0.5} & \multicolumn{2}{l}{0.75} & \multicolumn{2}{l}{1.0} & \multicolumn{2}{l}{0.25} & \multicolumn{2}{l}{0.5} & \multicolumn{2}{l}{0.75} & \multicolumn{3}{l}{1.0} \\
+{} &              mean &   std & mean &   std & mean &   std & mean &   std &             mean &    std & mean &    std & mean &    std & mean & \multicolumn{2}{l}{std} \\
+group                &                   &       &      &       &      &       &      &       &                  &        &      &        &      &        &      &       &            \\
+\midrule
+17N                  &                28 &  13.3 &   45 &  15.4 &   75 &  20.7 &  106 &  26.0 &               23 &   14.5 &   36 &   16.0 &   51 &   16.9 &  106 &  26.0 &        0.0 \\
+9/11 Hijackers       &               104 &  29.1 &  189 &  36.5 &  296 &  43.5 &  413 &  55.0 &               94 &   56.6 &  111 &   55.8 &  149 &   55.4 &  413 &  55.0 &        0.0 \\
+ISIL                 &                53 &  21.0 &  108 &  29.8 &  166 &  37.0 &  223 &  44.0 &               31 &   18.6 &   53 &   21.9 &  114 &   31.5 &  223 &  44.0 &        0.0 \\
+Al Qaeda             &               177 &  30.4 &  397 &  50.4 &  575 &  63.3 &  816 &  71.4 &              304 &  215.5 &  431 &  241.0 &  444 &  237.7 &  816 &  71.4 &        0.6 \\
+Caviar               &               137 &  24.9 &  301 &  38.6 &  577 &  61.3 &  848 &  71.5 &               52 &   18.6 &  119 &   23.8 &  258 &   35.6 &  848 &  71.5 &        2.2 \\
+Operation Acero      &                47 &  18.2 &   83 &  23.2 &  139 &  30.5 &  203 &  39.8 &               29 &   17.3 &   52 &   20.4 &   79 &   23.7 &  203 &  39.8 &        0.0 \\
+Operation Jake       &                68 &  23.5 &  143 &  33.8 &  246 &  47.1 &  336 &  55.8 &               41 &   26.8 &   59 &   27.7 &  141 &   35.5 &  336 &  55.8 &        0.0 \\
+Operation Juanes     &                82 &  25.5 &  161 &  31.3 &  268 &  42.4 &  389 &  51.4 &               57 &   34.7 &   82 &   36.8 &  117 &   36.8 &  389 &  51.4 &        0.0 \\
+Operation Mambo      &                48 &  18.0 &   92 &  22.5 &  157 &  30.6 &  229 &  41.5 &               33 &   18.7 &   58 &   21.6 &   88 &   23.2 &  229 &  41.5 &        0.0 \\
+Heroin Natarjan      &                58 &  18.4 &  102 &  22.7 &  157 &  27.9 &  235 &  37.3 &               42 &   18.9 &   75 &   22.2 &  112 &   23.5 &  235 &  37.3 &        0.0 \\
+Italian Gangs        &               103 &  25.6 &  201 &  33.6 &  343 &  50.0 &  501 &  62.1 &               49 &   21.3 &  126 &   31.8 &  197 &   33.9 &  501 &  62.1 &        0.0 \\
+London Gangs         &                53 &  16.0 &   78 &  16.6 &  119 &  17.8 &  190 &  24.5 &               42 &   16.3 &   57 &   17.0 &   74 &   16.9 &  190 &  24.5 &        0.0 \\
+Mali Terrorists      &                52 &  18.4 &  123 &  30.6 &  177 &  34.4 &  267 &  45.6 &               47 &   24.1 &  102 &   56.5 &  139 &   44.0 &  267 &  45.6 &        0.0 \\
+Montagna Operation   &               155 &  25.7 &  331 &  37.0 &  607 &  57.2 &  906 &  57.4 &               73 &   31.3 &  126 &   28.7 &  237 &   31.8 &  906 &  57.4 &       20.0 \\
+Ndrangheta           &                84 &  17.9 &  131 &  17.3 &  208 &  18.5 &  331 &  25.5 &               68 &   23.0 &   88 &   22.8 &  112 &   22.1 &  331 &  25.5 &        0.0 \\
+Malasyian Extremists &                61 &  15.7 &   93 &  16.4 &  133 &  17.0 &  233 &  31.3 &               52 &   17.8 &   71 &   17.6 &   93 &   17.7 &  233 &  31.3 &        0.0 \\
+Project Togo         &                61 &  20.5 &  124 &  28.6 &  201 &  39.4 &  274 &  46.4 &               31 &   17.3 &   77 &   23.8 &  136 &   29.8 &  274 &  46.4 &        0.0 \\
+\bottomrule
 \end{tabular}
