--- a/final_project/tables/greedy_random.tex
+++ b/final_project/tables/greedy_random.tex
@@ -1,23 +1,26 @@
 \begin{tabular}{lrrrrrrrrrrrrrrrrl}
- & \multicolumn{8}{r}{caught_proportion} & \multicolumn{8}{r}{eigen_proportion} & unfinished \\
- & \multicolumn{2}{r}{0.250000} & \multicolumn{2}{r}{0.500000} & \multicolumn{2}{r}{0.750000} & \multicolumn{2}{r}{1.000000} & \multicolumn{2}{r}{0.250000} & \multicolumn{2}{r}{0.500000} & \multicolumn{2}{r}{0.750000} & \multicolumn{2}{r}{1.000000} &  \\
- & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std &  \\
-group &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\
-17N & 30 & 14.100000 & 47 & 16.300000 & 75 & 20.400000 & 106 & 25.500000 & 25 & 15.600000 & 39 & 17.000000 & 52 & 17.900000 & 106 & 25.500000 & 0.000000 \\
-9/11 Hijackers & 98 & 25.500000 & 181 & 32.900000 & 290 & 42.700000 & 412 & 52.400000 & 75 & 44.700000 & 96 & 46.700000 & 134 & 45.200000 & 412 & 52.400000 & 0.000000 \\
-ISIL & 54 & 20.500000 & 111 & 29.300000 & 171 & 37.500000 & 231 & 45.000000 & 31 & 18.100000 & 57 & 23.100000 & 139 & 34.300000 & 231 & 45.000000 & 0.000000 \\
-Al Qaeda & 175 & 31.100000 & 379 & 50.800000 & 567 & 58.500000 & 833 & 69.700000 & 277 & 185.200000 & 442 & 216.700000 & 455 & 213.300000 & 833 & 69.700000 & 0.000000 \\
-Caviar & 142 & 27.500000 & 309 & 38.000000 & 573 & 60.400000 & 838 & 74.500000 & 58 & 22.800000 & 124 & 27.100000 & 286 & 39.100000 & 838 & 74.500000 & 0.000000 \\
-Operation Acero & 45 & 17.900000 & 83 & 23.500000 & 141 & 33.000000 & 200 & 41.000000 & 27 & 17.700000 & 50 & 20.700000 & 80 & 24.300000 & 200 & 41.000000 & 0.000000 \\
-Operation Jake & 67 & 21.700000 & 144 & 32.600000 & 242 & 42.300000 & 334 & 53.700000 & 40 & 26.000000 & 58 & 27.400000 & 155 & 35.300000 & 334 & 53.700000 & 0.000000 \\
-Operation Juanes & 80 & 25.300000 & 157 & 30.600000 & 264 & 39.900000 & 385 & 52.400000 & 57 & 37.800000 & 82 & 39.000000 & 116 & 39.300000 & 385 & 52.400000 & 0.000000 \\
-Operation Mambo & 47 & 17.100000 & 90 & 22.200000 & 153 & 29.500000 & 225 & 38.700000 & 32 & 18.200000 & 57 & 20.700000 & 88 & 23.300000 & 225 & 38.700000 & 0.000000 \\
-Heroin Natarjan & 58 & 19.200000 & 100 & 24.100000 & 158 & 28.900000 & 239 & 38.400000 & 43 & 19.900000 & 73 & 22.200000 & 113 & 25.600000 & 239 & 38.400000 & 0.000000 \\
-Italian Gangs & 105 & 24.900000 & 206 & 33.500000 & 341 & 43.600000 & 494 & 58.000000 & 56 & 26.800000 & 124 & 33.100000 & 206 & 34.300000 & 494 & 58.000000 & 0.000000 \\
-London Gangs & 52 & 15.300000 & 77 & 15.800000 & 119 & 18.800000 & 194 & 26.900000 & 41 & 15.600000 & 56 & 16.500000 & 72 & 16.300000 & 194 & 26.900000 & 0.000000 \\
-Mali Terrorists & 55 & 19.700000 & 118 & 29.000000 & 177 & 33.800000 & 265 & 42.800000 & 50 & 27.400000 & 89 & 47.700000 & 120 & 39.500000 & 265 & 42.800000 & 0.000000 \\
-Montagna Operation & 151 & 24.600000 & 318 & 34.500000 & 589 & 49.000000 & 906 & 59.700000 & 75 & 29.800000 & 125 & 27.000000 & 237 & 28.900000 & 906 & 59.700000 & 0.000000 \\
-Ndrangheta & 82 & 17.900000 & 129 & 17.700000 & 208 & 19.100000 & 328 & 27.300000 & 65 & 21.600000 & 84 & 21.600000 & 109 & 21.100000 & 328 & 27.300000 & 0.000000 \\
-Malasyian Extremists & 59 & 14.900000 & 91 & 15.400000 & 131 & 16.100000 & 226 & 27.800000 & 49 & 17.500000 & 69 & 17.500000 & 91 & 16.900000 & 226 & 27.800000 & 0.000000 \\
-Project Togo & 62 & 20.300000 & 127 & 31.400000 & 197 & 38.700000 & 272 & 48.800000 & 32 & 16.100000 & 84 & 26.900000 & 152 & 34.600000 & 272 & 48.800000 & 0.000000 \\
+\toprule
+{} & \multicolumn{8}{l}{caught\_proportion} & \multicolumn{8}{l}{eigen\_proportion} & unfinished \\
+{} & \multicolumn{2}{l}{0.25} & \multicolumn{2}{l}{0.5} & \multicolumn{2}{l}{0.75} & \multicolumn{2}{l}{1.0} & \multicolumn{2}{l}{0.25} & \multicolumn{2}{l}{0.5} & \multicolumn{2}{l}{0.75} & \multicolumn{3}{l}{1.0} \\
+{} &              mean &   std & mean &   std & mean &   std & mean &   std &             mean &    std & mean &    std & mean &    std & mean & \multicolumn{2}{l}{std} \\
+group                &                   &       &      &       &      &       &      &       &                  &        &      &        &      &        &      &       &            \\
+\midrule
+17N                  &                30 &  14.1 &   47 &  16.3 &   75 &  20.4 &  106 &  25.5 &               25 &   15.6 &   39 &   17.0 &   52 &   17.9 &  106 &  25.5 &        0.0 \\
+9/11 Hijackers       &                98 &  25.5 &  181 &  32.9 &  290 &  42.7 &  412 &  52.4 &               75 &   44.7 &   96 &   46.7 &  134 &   45.2 &  412 &  52.4 &        0.0 \\
+ISIL                 &                54 &  20.5 &  111 &  29.3 &  171 &  37.5 &  231 &  45.0 &               31 &   18.1 &   57 &   23.1 &  139 &   34.3 &  231 &  45.0 &        0.0 \\
+Al Qaeda             &               176 &  31.9 &  381 &  51.6 &  569 &  59.6 &  833 &  69.7 &              278 &  186.5 &  444 &  217.5 &  458 &  214.2 &  833 &  69.7 &        1.8 \\
+Caviar               &               142 &  27.8 &  311 &  39.1 &  577 &  63.7 &  838 &  74.5 &               58 &   22.9 &  125 &   27.2 &  287 &   39.7 &  838 &  74.5 &        3.6 \\
+Operation Acero      &                45 &  17.9 &   83 &  23.5 &  141 &  33.0 &  200 &  41.0 &               27 &   17.7 &   50 &   20.7 &   80 &   24.3 &  200 &  41.0 &        0.0 \\
+Operation Jake       &                67 &  21.7 &  144 &  32.6 &  242 &  42.3 &  334 &  53.7 &               40 &   26.0 &   58 &   27.4 &  155 &   35.3 &  334 &  53.7 &        0.0 \\
+Operation Juanes     &                80 &  25.3 &  157 &  30.6 &  264 &  39.9 &  385 &  52.4 &               57 &   37.8 &   82 &   39.0 &  116 &   39.3 &  385 &  52.4 &        0.0 \\
+Operation Mambo      &                47 &  17.1 &   90 &  22.2 &  153 &  29.5 &  225 &  38.7 &               32 &   18.2 &   57 &   20.7 &   88 &   23.3 &  225 &  38.7 &        0.0 \\
+Heroin Natarjan      &                58 &  19.2 &  100 &  24.1 &  158 &  28.9 &  239 &  38.4 &               43 &   19.9 &   73 &   22.2 &  113 &   25.6 &  239 &  38.4 &        0.0 \\
+Italian Gangs        &               105 &  24.9 &  206 &  33.5 &  341 &  43.6 &  494 &  58.0 &               56 &   26.8 &  124 &   33.1 &  206 &   34.3 &  494 &  58.0 &        0.0 \\
+London Gangs         &                52 &  15.3 &   77 &  15.8 &  119 &  18.8 &  194 &  26.9 &               41 &   15.6 &   56 &   16.5 &   72 &   16.3 &  194 &  26.9 &        0.0 \\
+Mali Terrorists      &                55 &  19.7 &  118 &  29.0 &  177 &  33.8 &  265 &  42.8 &               50 &   27.4 &   89 &   47.7 &  120 &   39.5 &  265 &  42.8 &        0.0 \\
+Montagna Operation   &               154 &  26.3 &  323 &  36.6 &  603 &  56.4 &  906 &  59.7 &               75 &   30.2 &  127 &   27.8 &  241 &   30.6 &  906 &  59.7 &       18.4 \\
+Ndrangheta           &                82 &  17.9 &  129 &  17.7 &  208 &  19.1 &  328 &  27.3 &               65 &   21.6 &   84 &   21.6 &  109 &   21.1 &  328 &  27.3 &        0.0 \\
+Malasyian Extremists &                59 &  14.9 &   91 &  15.4 &  131 &  16.1 &  226 &  27.8 &               49 &   17.5 &   69 &   17.5 &   91 &   16.9 &  226 &  27.8 &        0.0 \\
+Project Togo         &                62 &  20.3 &  127 &  31.4 &  197 &  38.7 &  272 &  48.8 &               32 &   16.1 &   84 &   26.9 &  152 &   34.6 &  272 &  48.8 &        0.0 \\
+\bottomrule
 \end{tabular}
