--- a/final_project/tables/model_results.tex
+++ b/final_project/tables/model_results.tex
@@ -1,16 +1,19 @@
 \begin{tabular}{lrrrrrrrrr}
- & \multicolumn{4}{r}{caught_proportion} & \multicolumn{4}{r}{eigen_proportion} & unfinished \\
- & 0.250000 & 0.500000 & 0.750000 & 1.000000 & 0.250000 & 0.500000 & 0.750000 & 1.000000 &  \\
-strategy &  &  &  &  &  &  &  &  &  \\
-balanced_diameter_1 & 65 & 126 & 201 & 292 & 48 & 81 & 127 & 292 & 0.000000 \\
-balanced_diameter_3 & 62 & 121 & 193 & 281 & 45 & 79 & 129 & 281 & 0.000000 \\
-balanced_diameter_5 & 65 & 123 & 193 & 280 & 48 & 82 & 132 & 280 & 0.000000 \\
-balanced_diameter_7 & 74 & 133 & 202 & 287 & 61 & 97 & 146 & 287 & 0.000000 \\
-balanced_diameter_9 & 78 & 143 & 214 & 295 & 62 & 109 & 170 & 295 & 0.000000 \\
-greedy_diameter & 68 & 133 & 211 & 310 & 55 & 95 & 142 & 310 & 0.000000 \\
-greedy_eigenvector & 79 & 156 & 256 & 375 & 63 & 101 & 148 & 375 & 0.000000 \\
-greedy_random & 79 & 155 & 254 & 374 & 60 & 100 & 152 & 374 & 0.000000 \\
-least_central & 96 & 186 & 279 & 382 & 89 & 151 & 233 & 382 & 0.000000 \\
-max_diameter & 79 & 147 & 226 & 311 & 64 & 108 & 174 & 311 & 0.000000 \\
-naive_random & 107 & 199 & 290 & 390 & 88 & 153 & 229 & 390 & 0.000000 \\
+\toprule
+{} & \multicolumn{4}{l}{caught\_proportion} & \multicolumn{4}{l}{eigen\_proportion} & unfinished \\
+{} &              0.25 &  0.5 & 0.75 &  1.0 &             0.25 &  0.5 & 0.75 & \multicolumn{2}{l}{1.0} \\
+strategy            &                   &      &      &      &                  &      &      &      &            \\
+\midrule
+balanced\_diameter\_1 &                65 &  126 &  202 &  292 &               48 &   82 &  127 &  292 &       0.05 \\
+balanced\_diameter\_3 &                62 &  121 &  193 &  281 &               45 &   79 &  129 &  281 &       0.04 \\
+balanced\_diameter\_5 &                65 &  123 &  194 &  280 &               48 &   82 &  132 &  280 &       0.06 \\
+balanced\_diameter\_7 &                74 &  133 &  202 &  287 &               61 &   97 &  146 &  287 &       0.02 \\
+balanced\_diameter\_9 &                78 &  143 &  214 &  295 &               62 &  109 &  170 &  295 &       0.09 \\
+greedy\_diameter     &                68 &  133 &  212 &  310 &               56 &   95 &  143 &  310 &       0.17 \\
+greedy\_eigenvector  &                81 &  159 &  261 &  375 &               63 &  101 &  149 &  375 &       1.35 \\
+greedy\_random       &                80 &  157 &  260 &  374 &               61 &  101 &  154 &  374 &       1.41 \\
+least\_central       &               100 &  194 &  292 &  382 &               91 &  156 &  243 &  382 &       2.89 \\
+max\_diameter        &                80 &  148 &  228 &  311 &               65 &  109 &  174 &  311 &       0.24 \\
+naive\_random        &               113 &  210 &  307 &  390 &               92 &  160 &  241 &  390 &       3.56 \\
+\bottomrule
 \end{tabular}
