--- a/final_project/tables/naive_random.tex
+++ b/final_project/tables/naive_random.tex
@@ -1,23 +1,26 @@
 \begin{tabular}{lrrrrrrrrrrrrrrrrl}
- & \multicolumn{8}{r}{caught_proportion} & \multicolumn{8}{r}{eigen_proportion} & unfinished \\
- & \multicolumn{2}{r}{0.250000} & \multicolumn{2}{r}{0.500000} & \multicolumn{2}{r}{0.750000} & \multicolumn{2}{r}{1.000000} & \multicolumn{2}{r}{0.250000} & \multicolumn{2}{r}{0.500000} & \multicolumn{2}{r}{0.750000} & \multicolumn{2}{r}{1.000000} &  \\
- & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std &  \\
-group &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\
-17N & 36 & 17.400000 & 61 & 22.400000 & 90 & 26.600000 & 116 & 29.600000 & 29 & 17.300000 & 55 & 23.700000 & 78 & 26.100000 & 116 & 29.600000 & 0.000000 \\
-9/11 Hijackers & 119 & 29.900000 & 226 & 40.900000 & 333 & 49.700000 & 439 & 56.100000 & 90 & 49.400000 & 144 & 57.500000 & 218 & 59.800000 & 439 & 56.100000 & 0.000000 \\
-ISIL & 59 & 21.800000 & 113 & 29.200000 & 170 & 38.800000 & 229 & 44.400000 & 33 & 18.800000 & 80 & 28.100000 & 141 & 33.800000 & 229 & 44.400000 & 0.000000 \\
-Al Qaeda & 222 & 42.600000 & 437 & 54.100000 & 641 & 63.900000 & 859 & 67.600000 & 363 & 229.900000 & 449 & 247.300000 & 508 & 247.000000 & 859 & 67.600000 & 0.000000 \\
-Caviar & 219 & 38.900000 & 422 & 49.600000 & 640 & 58.000000 & 875 & 68.200000 & 126 & 39.900000 & 282 & 51.800000 & 498 & 61.300000 & 875 & 68.200000 & 0.000000 \\
-Operation Acero & 55 & 21.500000 & 104 & 27.400000 & 153 & 32.600000 & 211 & 39.900000 & 36 & 19.200000 & 77 & 26.700000 & 124 & 30.700000 & 211 & 39.900000 & 0.000000 \\
-Operation Jake & 84 & 27.800000 & 163 & 36.000000 & 254 & 44.000000 & 341 & 52.800000 & 54 & 30.400000 & 112 & 37.400000 & 194 & 41.700000 & 341 & 52.800000 & 0.000000 \\
-Operation Juanes & 102 & 28.200000 & 199 & 36.600000 & 300 & 43.700000 & 408 & 54.900000 & 78 & 44.300000 & 133 & 52.900000 & 203 & 55.500000 & 408 & 54.900000 & 0.000000 \\
-Operation Mambo & 64 & 21.600000 & 124 & 31.000000 & 184 & 34.600000 & 242 & 43.000000 & 50 & 23.900000 & 98 & 34.500000 & 150 & 38.200000 & 242 & 43.000000 & 0.000000 \\
-Heroin Natarjan & 81 & 26.200000 & 143 & 33.300000 & 206 & 37.600000 & 272 & 44.400000 & 65 & 25.300000 & 123 & 33.100000 & 183 & 36.900000 & 272 & 44.400000 & 0.000000 \\
-Italian Gangs & 139 & 34.200000 & 270 & 47.900000 & 396 & 57.500000 & 532 & 67.900000 & 91 & 34.800000 & 198 & 46.500000 & 328 & 55.000000 & 532 & 67.900000 & 0.000000 \\
-London Gangs & 81 & 21.900000 & 127 & 23.900000 & 173 & 26.500000 & 228 & 30.500000 & 67 & 24.200000 & 107 & 25.300000 & 144 & 26.600000 & 228 & 30.500000 & 0.000000 \\
-Mali Terrorists & 67 & 23.200000 & 136 & 32.500000 & 202 & 37.900000 & 279 & 47.800000 & 63 & 35.800000 & 110 & 48.700000 & 161 & 47.300000 & 279 & 47.800000 & 0.000000 \\
-Montagna Operation & 236 & 37.500000 & 457 & 44.800000 & 680 & 47.600000 & 929 & 51.300000 & 140 & 43.000000 & 295 & 54.300000 & 497 & 55.500000 & 929 & 51.300000 & 0.000000 \\
-Ndrangheta & 161 & 27.700000 & 249 & 30.600000 & 333 & 32.500000 & 429 & 37.100000 & 127 & 34.100000 & 195 & 36.700000 & 267 & 36.000000 & 429 & 37.100000 & 0.000000 \\
-Malasyian Extremists & 104 & 23.700000 & 155 & 25.600000 & 202 & 26.600000 & 280 & 35.600000 & 87 & 25.200000 & 135 & 27.600000 & 176 & 27.400000 & 280 & 35.600000 & 0.000000 \\
-Project Togo & 74 & 24.100000 & 143 & 34.000000 & 209 & 41.200000 & 277 & 48.800000 & 47 & 23.300000 & 108 & 30.500000 & 182 & 38.700000 & 277 & 48.800000 & 0.000000 \\
+\toprule
+{} & \multicolumn{8}{l}{caught\_proportion} & \multicolumn{8}{l}{eigen\_proportion} & unfinished \\
+{} & \multicolumn{2}{l}{0.25} & \multicolumn{2}{l}{0.5} & \multicolumn{2}{l}{0.75} & \multicolumn{2}{l}{1.0} & \multicolumn{2}{l}{0.25} & \multicolumn{2}{l}{0.5} & \multicolumn{2}{l}{0.75} & \multicolumn{3}{l}{1.0} \\
+{} &              mean &   std & mean &   std & mean &   std & mean &   std &             mean &    std & mean &    std & mean &    std & mean & \multicolumn{2}{l}{std} \\
+group                &                   &       &      &       &      &       &      &       &                  &        &      &        &      &        &      &       &            \\
+\midrule
+17N                  &                36 &  17.4 &   61 &  22.4 &   90 &  26.6 &  116 &  29.6 &               29 &   17.3 &   55 &   23.7 &   78 &   26.1 &  116 &  29.6 &        0.0 \\
+9/11 Hijackers       &               119 &  29.9 &  226 &  40.9 &  333 &  49.7 &  439 &  56.1 &               90 &   49.4 &  144 &   57.5 &  218 &   59.8 &  439 &  56.1 &        0.0 \\
+ISIL                 &                59 &  21.8 &  113 &  29.2 &  170 &  38.8 &  229 &  44.4 &               33 &   18.8 &   80 &   28.1 &  141 &   33.8 &  229 &  44.4 &        0.0 \\
+Al Qaeda             &               224 &  43.6 &  441 &  57.2 &  647 &  68.8 &  859 &  67.6 &              364 &  229.8 &  452 &  248.1 &  511 &  248.5 &  859 &  67.6 &        5.4 \\
+Caviar               &               223 &  42.5 &  429 &  54.5 &  651 &  66.9 &  875 &  68.2 &              129 &   42.7 &  287 &   54.7 &  507 &   65.9 &  875 &  68.2 &        9.4 \\
+Operation Acero      &                55 &  21.5 &  104 &  27.4 &  153 &  32.6 &  211 &  39.9 &               36 &   19.2 &   77 &   26.7 &  124 &   30.7 &  211 &  39.9 &        0.0 \\
+Operation Jake       &                84 &  27.8 &  163 &  36.0 &  254 &  44.0 &  341 &  52.8 &               54 &   30.4 &  112 &   37.4 &  194 &   41.7 &  341 &  52.8 &        0.0 \\
+Operation Juanes     &               102 &  28.2 &  199 &  36.6 &  300 &  43.7 &  408 &  54.9 &               78 &   44.3 &  133 &   52.9 &  203 &   55.5 &  408 &  54.9 &        0.0 \\
+Operation Mambo      &                64 &  21.6 &  124 &  31.0 &  184 &  34.6 &  242 &  43.0 &               50 &   23.9 &   98 &   34.5 &  150 &   38.2 &  242 &  43.0 &        0.0 \\
+Heroin Natarjan      &                81 &  26.2 &  143 &  33.3 &  206 &  37.6 &  272 &  44.4 &               65 &   25.3 &  123 &   33.1 &  183 &   36.9 &  272 &  44.4 &        0.0 \\
+Italian Gangs        &               139 &  34.2 &  270 &  47.9 &  396 &  57.5 &  532 &  67.9 &               91 &   34.8 &  198 &   46.5 &  328 &   55.0 &  532 &  67.9 &        0.0 \\
+London Gangs         &                81 &  21.9 &  127 &  23.9 &  173 &  26.5 &  228 &  30.5 &               67 &   24.2 &  107 &   25.3 &  144 &   26.6 &  228 &  30.5 &        0.0 \\
+Mali Terrorists      &                67 &  23.2 &  136 &  32.5 &  202 &  37.9 &  279 &  47.8 &               63 &   35.8 &  110 &   48.7 &  161 &   47.3 &  279 &  47.8 &        0.0 \\
+Montagna Operation   &               252 &  44.5 &  485 &  58.1 &  723 &  69.4 &  929 &  51.3 &              150 &   48.7 &  310 &   62.1 &  527 &   68.6 &  929 &  51.3 &       45.2 \\
+Ndrangheta           &               161 &  27.7 &  249 &  30.6 &  333 &  32.5 &  429 &  37.1 &              127 &   34.1 &  195 &   36.7 &  267 &   36.0 &  429 &  37.1 &        0.0 \\
+Malasyian Extremists &               104 &  23.7 &  155 &  25.6 &  202 &  26.6 &  280 &  35.6 &               87 &   25.2 &  135 &   27.6 &  176 &   27.4 &  280 &  35.6 &        0.0 \\
+Project Togo         &                74 &  24.1 &  143 &  34.0 &  209 &  41.2 &  277 &  48.8 &               47 &   23.3 &  108 &   30.5 &  182 &   38.7 &  277 &  48.8 &        0.0 \\
+\bottomrule
 \end{tabular}
