--- a/final_project/tables/balanced_diameter_1.tex
+++ b/final_project/tables/balanced_diameter_1.tex
@@ -1,21 +1,24 @@
 \begin{tabular}{lrrrrrrrrrrrrrrrrl}
- & \multicolumn{8}{r}{caught_proportion} & \multicolumn{8}{r}{eigen_proportion} & unfinished \\
- & \multicolumn{2}{r}{0.250000} & \multicolumn{2}{r}{0.500000} & \multicolumn{2}{r}{0.750000} & \multicolumn{2}{r}{1.000000} & \multicolumn{2}{r}{0.250000} & \multicolumn{2}{r}{0.500000} & \multicolumn{2}{r}{0.750000} & \multicolumn{2}{r}{1.000000} &  \\
- & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std &  \\
-group &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\
-17N & 28 & 13.600000 & 44 & 15.900000 & 72 & 18.900000 & 103 & 24.000000 & 23 & 14.600000 & 36 & 16.200000 & 49 & 16.800000 & 103 & 24.000000 & 0.000000 \\
-9/11 Hijackers & 96 & 25.600000 & 179 & 31.400000 & 284 & 40.000000 & 414 & 52.000000 & 69 & 38.500000 & 93 & 44.200000 & 130 & 40.500000 & 414 & 52.000000 & 0.000000 \\
-ISIL & 56 & 21.800000 & 113 & 30.400000 & 173 & 37.100000 & 233 & 43.700000 & 33 & 20.000000 & 63 & 25.300000 & 141 & 33.400000 & 233 & 43.700000 & 0.000000 \\
-Al Qaeda & 172 & 31.700000 & 372 & 56.800000 & 557 & 67.100000 & 827 & 82.900000 & 260 & 185.200000 & 424 & 216.600000 & 437 & 212.600000 & 827 & 82.900000 & 0.000000 \\
-Operation Acero & 44 & 17.000000 & 82 & 22.000000 & 142 & 31.900000 & 204 & 39.500000 & 26 & 16.300000 & 48 & 19.000000 & 80 & 22.800000 & 204 & 39.500000 & 0.000000 \\
-Operation Jake & 68 & 23.200000 & 144 & 31.400000 & 238 & 43.400000 & 325 & 49.400000 & 41 & 26.300000 & 60 & 27.000000 & 156 & 34.100000 & 325 & 49.400000 & 0.000000 \\
-Operation Juanes & 80 & 24.300000 & 156 & 29.800000 & 259 & 39.100000 & 376 & 50.000000 & 58 & 36.400000 & 83 & 37.700000 & 118 & 38.200000 & 376 & 50.000000 & 0.000000 \\
-Operation Mambo & 46 & 16.600000 & 91 & 22.000000 & 150 & 28.600000 & 214 & 36.100000 & 33 & 17.100000 & 57 & 19.700000 & 89 & 22.800000 & 214 & 36.100000 & 0.000000 \\
-Heroin Natarjan & 58 & 18.700000 & 102 & 22.900000 & 159 & 28.200000 & 239 & 36.500000 & 44 & 19.300000 & 74 & 21.200000 & 115 & 24.400000 & 239 & 36.500000 & 0.000000 \\
-Italian Gangs & 105 & 25.000000 & 204 & 34.600000 & 341 & 47.000000 & 497 & 60.300000 & 58 & 27.000000 & 123 & 32.000000 & 205 & 35.500000 & 497 & 60.300000 & 0.000000 \\
-London Gangs & 53 & 16.900000 & 78 & 17.500000 & 120 & 19.700000 & 191 & 26.800000 & 42 & 17.300000 & 57 & 18.400000 & 74 & 18.200000 & 191 & 26.800000 & 0.000000 \\
-Mali Terrorists & 54 & 19.100000 & 122 & 28.500000 & 180 & 34.400000 & 269 & 45.000000 & 49 & 26.300000 & 91 & 50.600000 & 128 & 38.600000 & 269 & 45.000000 & 0.000000 \\
-Ndrangheta & 86 & 17.700000 & 133 & 16.700000 & 209 & 16.400000 & 330 & 26.700000 & 69 & 23.000000 & 89 & 22.800000 & 114 & 22.300000 & 330 & 26.700000 & 0.000000 \\
-Malasyian Extremists & 56 & 14.100000 & 86 & 15.000000 & 127 & 15.900000 & 219 & 28.000000 & 45 & 15.100000 & 65 & 15.800000 & 86 & 16.100000 & 219 & 28.000000 & 0.000000 \\
-Project Togo & 63 & 21.400000 & 126 & 28.000000 & 197 & 36.800000 & 272 & 44.800000 & 33 & 18.300000 & 84 & 26.700000 & 152 & 32.100000 & 272 & 44.800000 & 0.000000 \\
+\toprule
+{} & \multicolumn{8}{l}{caught\_proportion} & \multicolumn{8}{l}{eigen\_proportion} & unfinished \\
+{} & \multicolumn{2}{l}{0.25} & \multicolumn{2}{l}{0.5} & \multicolumn{2}{l}{0.75} & \multicolumn{2}{l}{1.0} & \multicolumn{2}{l}{0.25} & \multicolumn{2}{l}{0.5} & \multicolumn{2}{l}{0.75} & \multicolumn{3}{l}{1.0} \\
+{} &              mean &   std & mean &   std & mean &   std & mean &   std &             mean &    std & mean &    std & mean &    std & mean & \multicolumn{2}{l}{std} \\
+group                &                   &       &      &       &      &       &      &       &                  &        &      &        &      &        &      &       &            \\
+\midrule
+17N                  &                28 &  13.6 &   44 &  15.9 &   72 &  18.9 &  103 &  24.0 &               23 &   14.6 &   36 &   16.2 &   49 &   16.8 &  103 &  24.0 &        0.0 \\
+9/11 Hijackers       &                96 &  25.6 &  179 &  31.4 &  284 &  40.0 &  414 &  52.0 &               69 &   38.5 &   93 &   44.2 &  130 &   40.5 &  414 &  52.0 &        0.0 \\
+ISIL                 &                56 &  21.8 &  113 &  30.4 &  173 &  37.1 &  233 &  43.7 &               33 &   20.0 &   63 &   25.3 &  141 &   33.4 &  233 &  43.7 &        0.0 \\
+Al Qaeda             &               173 &  31.9 &  374 &  59.3 &  559 &  69.6 &  827 &  82.9 &              257 &  185.3 &  419 &  217.6 &  433 &  213.4 &  827 &  82.9 &        0.6 \\
+Operation Acero      &                44 &  17.0 &   82 &  22.0 &  142 &  31.9 &  204 &  39.5 &               26 &   16.3 &   48 &   19.0 &   80 &   22.8 &  204 &  39.5 &        0.0 \\
+Operation Jake       &                68 &  23.2 &  144 &  31.4 &  238 &  43.4 &  325 &  49.4 &               41 &   26.3 &   60 &   27.0 &  156 &   34.1 &  325 &  49.4 &        0.0 \\
+Operation Juanes     &                80 &  24.3 &  156 &  29.8 &  259 &  39.1 &  376 &  50.0 &               58 &   36.4 &   83 &   37.7 &  118 &   38.2 &  376 &  50.0 &        0.0 \\
+Operation Mambo      &                46 &  16.6 &   91 &  22.0 &  150 &  28.6 &  214 &  36.1 &               33 &   17.1 &   57 &   19.7 &   89 &   22.8 &  214 &  36.1 &        0.0 \\
+Heroin Natarjan      &                58 &  18.7 &  102 &  22.9 &  159 &  28.2 &  239 &  36.5 &               44 &   19.3 &   74 &   21.2 &  115 &   24.4 &  239 &  36.5 &        0.0 \\
+Italian Gangs        &               105 &  25.0 &  204 &  34.6 &  341 &  47.0 &  497 &  60.3 &               58 &   27.0 &  123 &   32.0 &  205 &   35.5 &  497 &  60.3 &        0.0 \\
+London Gangs         &                53 &  16.9 &   78 &  17.5 &  120 &  19.7 &  191 &  26.8 &               42 &   17.3 &   57 &   18.4 &   74 &   18.2 &  191 &  26.8 &        0.0 \\
+Mali Terrorists      &                54 &  19.1 &  122 &  28.5 &  180 &  34.4 &  269 &  45.0 &               49 &   26.3 &   91 &   50.6 &  128 &   38.6 &  269 &  45.0 &        0.0 \\
+Ndrangheta           &                86 &  17.7 &  133 &  16.7 &  209 &  16.4 &  330 &  26.7 &               69 &   23.0 &   89 &   22.8 &  114 &   22.3 &  330 &  26.7 &        0.0 \\
+Malasyian Extremists &                56 &  14.1 &   86 &  15.0 &  127 &  15.9 &  219 &  28.0 &               45 &   15.1 &   65 &   15.8 &   86 &   16.1 &  219 &  28.0 &        0.0 \\
+Project Togo         &                63 &  21.4 &  126 &  28.0 &  197 &  36.8 &  272 &  44.8 &               33 &   18.3 &   84 &   26.7 &  152 &   32.1 &  272 &  44.8 &        0.0 \\
+\bottomrule
 \end{tabular}
