--- a/final_project/tables/balanced_diameter_3.tex
+++ b/final_project/tables/balanced_diameter_3.tex
@@ -1,22 +1,25 @@
 \begin{tabular}{lrrrrrrrrrrrrrrrrl}
- & \multicolumn{8}{r}{caught_proportion} & \multicolumn{8}{r}{eigen_proportion} & unfinished \\
- & \multicolumn{2}{r}{0.250000} & \multicolumn{2}{r}{0.500000} & \multicolumn{2}{r}{0.750000} & \multicolumn{2}{r}{1.000000} & \multicolumn{2}{r}{0.250000} & \multicolumn{2}{r}{0.500000} & \multicolumn{2}{r}{0.750000} & \multicolumn{2}{r}{1.000000} &  \\
- & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std &  \\
-group &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\
-17N & 29 & 14.100000 & 47 & 16.800000 & 76 & 19.400000 & 109 & 24.800000 & 25 & 16.000000 & 38 & 17.900000 & 52 & 18.500000 & 109 & 24.800000 & 0.000000 \\
-9/11 Hijackers & 99 & 28.400000 & 187 & 34.400000 & 289 & 41.400000 & 422 & 56.100000 & 75 & 43.400000 & 96 & 46.700000 & 137 & 46.900000 & 422 & 56.100000 & 0.000000 \\
-ISIL & 53 & 20.000000 & 111 & 30.200000 & 172 & 38.700000 & 232 & 44.800000 & 32 & 17.700000 & 58 & 23.100000 & 139 & 34.000000 & 232 & 44.800000 & 0.000000 \\
-Al Qaeda & 169 & 33.000000 & 373 & 54.700000 & 552 & 67.400000 & 821 & 74.200000 & 233 & 185.300000 & 393 & 225.600000 & 407 & 221.300000 & 821 & 74.200000 & 0.000000 \\
-Operation Acero & 47 & 16.800000 & 85 & 23.600000 & 140 & 31.000000 & 203 & 40.600000 & 28 & 17.500000 & 53 & 19.100000 & 84 & 25.200000 & 203 & 40.600000 & 0.000000 \\
-Operation Jake & 66 & 22.200000 & 146 & 32.800000 & 251 & 43.400000 & 347 & 52.900000 & 39 & 23.900000 & 59 & 25.400000 & 158 & 35.100000 & 347 & 52.900000 & 0.000000 \\
-Operation Juanes & 84 & 25.900000 & 161 & 27.200000 & 264 & 39.400000 & 383 & 47.300000 & 63 & 36.400000 & 88 & 37.900000 & 122 & 37.900000 & 383 & 47.300000 & 0.000000 \\
-Operation Mambo & 48 & 17.100000 & 94 & 22.100000 & 154 & 29.900000 & 225 & 40.500000 & 33 & 18.600000 & 59 & 20.700000 & 91 & 23.100000 & 225 & 40.500000 & 0.000000 \\
-Heroin Natarjan & 62 & 20.900000 & 108 & 25.300000 & 162 & 30.200000 & 244 & 43.800000 & 45 & 20.800000 & 78 & 23.600000 & 120 & 26.400000 & 244 & 43.800000 & 0.000000 \\
-Italian Gangs & 106 & 24.800000 & 205 & 34.100000 & 344 & 49.900000 & 502 & 65.400000 & 61 & 27.700000 & 124 & 32.800000 & 206 & 35.300000 & 502 & 65.400000 & 0.000000 \\
-London Gangs & 51 & 15.800000 & 76 & 16.500000 & 117 & 19.200000 & 188 & 26.500000 & 40 & 16.400000 & 55 & 17.100000 & 72 & 17.100000 & 188 & 26.500000 & 0.000000 \\
-Mali Terrorists & 52 & 18.500000 & 116 & 28.000000 & 171 & 30.700000 & 262 & 41.100000 & 48 & 26.200000 & 88 & 48.300000 & 122 & 36.900000 & 262 & 41.100000 & 0.000000 \\
-Montagna Operation & 169 & 24.900000 & 342 & 32.000000 & 619 & 8.500000 & 954 & 42.300000 & 100 & 48.700000 & 147 & 30.000000 & 260 & 33.600000 & 954 & 42.300000 & 0.000000 \\
-Ndrangheta & 82 & 5.500000 & 129 & 4.600000 & 207 & 10.700000 & 336 & 22.800000 & 62 & 11.100000 & 81 & 10.400000 & 106 & 8.200000 & 336 & 22.800000 & 0.000000 \\
-Malasyian Extremists & 59 & 14.500000 & 92 & 14.800000 & 133 & 15.700000 & 236 & 29.100000 & 50 & 17.300000 & 70 & 17.300000 & 93 & 16.500000 & 236 & 29.100000 & 0.000000 \\
-Project Togo & 63 & 21.000000 & 129 & 30.200000 & 201 & 36.600000 & 278 & 43.700000 & 32 & 16.800000 & 86 & 26.500000 & 157 & 35.000000 & 278 & 43.700000 & 0.000000 \\
+\toprule
+{} & \multicolumn{8}{l}{caught\_proportion} & \multicolumn{8}{l}{eigen\_proportion} & unfinished \\
+{} & \multicolumn{2}{l}{0.25} & \multicolumn{2}{l}{0.5} & \multicolumn{2}{l}{0.75} & \multicolumn{2}{l}{1.0} & \multicolumn{2}{l}{0.25} & \multicolumn{2}{l}{0.5} & \multicolumn{2}{l}{0.75} & \multicolumn{3}{l}{1.0} \\
+{} &              mean &   std & mean &   std & mean &   std & mean &   std &             mean &    std & mean &    std & mean &    std & mean & \multicolumn{2}{l}{std} \\
+group                &                   &       &      &       &      &       &      &       &                  &        &      &        &      &        &      &       &            \\
+\midrule
+17N                  &                29 &  14.1 &   47 &  16.8 &   76 &  19.4 &  109 &  24.8 &               25 &   16.0 &   38 &   17.9 &   52 &   18.5 &  109 &  24.8 &        0.0 \\
+9/11 Hijackers       &                99 &  28.4 &  187 &  34.4 &  289 &  41.4 &  422 &  56.1 &               75 &   43.4 &   96 &   46.7 &  137 &   46.9 &  422 &  56.1 &        0.0 \\
+ISIL                 &                53 &  20.0 &  111 &  30.2 &  172 &  38.7 &  232 &  44.8 &               32 &   17.7 &   58 &   23.1 &  139 &   34.0 &  232 &  44.8 &        0.0 \\
+Al Qaeda             &               169 &  33.0 &  373 &  54.7 &  552 &  67.4 &  821 &  74.2 &              233 &  185.3 &  393 &  225.6 &  407 &  221.3 &  821 &  74.2 &        0.0 \\
+Operation Acero      &                47 &  16.8 &   85 &  23.6 &  140 &  31.0 &  203 &  40.6 &               28 &   17.5 &   53 &   19.1 &   84 &   25.2 &  203 &  40.6 &        0.0 \\
+Operation Jake       &                66 &  22.2 &  146 &  32.8 &  251 &  43.4 &  347 &  52.9 &               39 &   23.9 &   59 &   25.4 &  158 &   35.1 &  347 &  52.9 &        0.0 \\
+Operation Juanes     &                84 &  25.9 &  161 &  27.2 &  264 &  39.4 &  383 &  47.3 &               63 &   36.4 &   88 &   37.9 &  122 &   37.9 &  383 &  47.3 &        0.0 \\
+Operation Mambo      &                48 &  17.1 &   94 &  22.1 &  154 &  29.9 &  225 &  40.5 &               33 &   18.6 &   59 &   20.7 &   91 &   23.1 &  225 &  40.5 &        0.0 \\
+Heroin Natarjan      &                62 &  20.9 &  108 &  25.3 &  162 &  30.2 &  244 &  43.8 &               45 &   20.8 &   78 &   23.6 &  120 &   26.4 &  244 &  43.8 &        0.0 \\
+Italian Gangs        &               106 &  24.8 &  205 &  34.1 &  344 &  49.9 &  502 &  65.4 &               61 &   27.7 &  124 &   32.8 &  206 &   35.3 &  502 &  65.4 &        0.0 \\
+London Gangs         &                51 &  15.8 &   76 &  16.5 &  117 &  19.2 &  188 &  26.5 &               40 &   16.4 &   55 &   17.1 &   72 &   17.1 &  188 &  26.5 &        0.0 \\
+Mali Terrorists      &                52 &  18.5 &  116 &  28.0 &  171 &  30.7 &  262 &  41.1 &               48 &   26.2 &   88 &   48.3 &  122 &   36.9 &  262 &  41.1 &        0.0 \\
+Montagna Operation   &               172 &  20.1 &  357 &  40.1 &  656 &  62.0 &  954 &  42.3 &               94 &   39.9 &  146 &   23.3 &  274 &   42.9 &  954 &  42.3 &        0.4 \\
+Ndrangheta           &                82 &   5.5 &  129 &   4.6 &  207 &  10.7 &  336 &  22.8 &               62 &   11.1 &   81 &   10.4 &  106 &    8.2 &  336 &  22.8 &        0.0 \\
+Malasyian Extremists &                59 &  14.5 &   92 &  14.8 &  133 &  15.7 &  236 &  29.1 &               50 &   17.3 &   70 &   17.3 &   93 &   16.5 &  236 &  29.1 &        0.0 \\
+Project Togo         &                63 &  21.0 &  129 &  30.2 &  201 &  36.6 &  278 &  43.7 &               32 &   16.8 &   86 &   26.5 &  157 &   35.0 &  278 &  43.7 &        0.0 \\
+\bottomrule
 \end{tabular}
