--- a/final_project/tables/greedy_diameter.tex
+++ b/final_project/tables/greedy_diameter.tex
@@ -1,23 +1,26 @@
 \begin{tabular}{lrrrrrrrrrrrrrrrrl}
- & \multicolumn{8}{r}{caught_proportion} & \multicolumn{8}{r}{eigen_proportion} & unfinished \\
- & \multicolumn{2}{r}{0.250000} & \multicolumn{2}{r}{0.500000} & \multicolumn{2}{r}{0.750000} & \multicolumn{2}{r}{1.000000} & \multicolumn{2}{r}{0.250000} & \multicolumn{2}{r}{0.500000} & \multicolumn{2}{r}{0.750000} & \multicolumn{2}{r}{1.000000} &  \\
- & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std &  \\
-group &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\
-17N & 28 & 13.300000 & 44 & 16.000000 & 72 & 20.200000 & 105 & 26.500000 & 23 & 14.900000 & 36 & 16.600000 & 50 & 18.000000 & 105 & 26.500000 & 0.000000 \\
-9/11 Hijackers & 98 & 25.500000 & 180 & 31.300000 & 283 & 38.300000 & 415 & 44.800000 & 67 & 40.000000 & 91 & 44.300000 & 131 & 41.000000 & 415 & 44.800000 & 0.000000 \\
-ISIL & 54 & 22.200000 & 111 & 28.900000 & 167 & 35.900000 & 226 & 45.700000 & 32 & 20.400000 & 60 & 25.000000 & 136 & 32.000000 & 226 & 45.700000 & 0.000000 \\
-Al Qaeda & 172 & 31.600000 & 375 & 51.100000 & 551 & 60.500000 & 817 & 70.600000 & 272 & 190.600000 & 425 & 215.600000 & 438 & 212.200000 & 817 & 70.600000 & 0.000000 \\
-Caviar & 139 & 29.300000 & 306 & 38.800000 & 574 & 52.900000 & 853 & 73.200000 & 62 & 21.100000 & 124 & 27.800000 & 285 & 39.200000 & 853 & 73.200000 & 0.000000 \\
-Operation Acero & 51 & 24.500000 & 89 & 29.900000 & 150 & 37.100000 & 216 & 47.400000 & 33 & 22.900000 & 55 & 26.700000 & 86 & 30.400000 & 216 & 47.400000 & 0.000000 \\
-Operation Jake & 65 & 20.300000 & 144 & 33.600000 & 246 & 46.400000 & 339 & 55.400000 & 37 & 21.900000 & 56 & 22.600000 & 154 & 35.900000 & 339 & 55.400000 & 0.000000 \\
-Operation Juanes & 80 & 25.100000 & 152 & 32.900000 & 255 & 43.300000 & 377 & 58.600000 & 61 & 38.700000 & 85 & 37.700000 & 117 & 39.700000 & 377 & 58.600000 & 0.000000 \\
-Operation Mambo & 46 & 17.500000 & 90 & 22.600000 & 151 & 28.800000 & 222 & 40.400000 & 32 & 18.700000 & 57 & 21.100000 & 87 & 24.000000 & 222 & 40.400000 & 0.000000 \\
-Heroin Natarjan & 58 & 18.100000 & 103 & 22.000000 & 159 & 27.000000 & 240 & 35.900000 & 42 & 18.600000 & 73 & 20.800000 & 114 & 23.300000 & 240 & 35.900000 & 0.000000 \\
-Italian Gangs & 105 & 24.300000 & 202 & 32.000000 & 342 & 46.700000 & 509 & 63.400000 & 57 & 24.000000 & 123 & 29.500000 & 203 & 32.800000 & 509 & 63.400000 & 0.000000 \\
-London Gangs & 51 & 17.000000 & 77 & 17.800000 & 118 & 19.600000 & 189 & 28.100000 & 41 & 17.500000 & 55 & 18.400000 & 72 & 18.200000 & 189 & 28.100000 & 0.000000 \\
-Mali Terrorists & 55 & 18.400000 & 121 & 28.500000 & 178 & 33.600000 & 273 & 45.000000 & 50 & 25.500000 & 94 & 49.300000 & 128 & 37.100000 & 273 & 45.000000 & 0.000000 \\
-Montagna Operation & 148 & 18.600000 & 316 & 39.900000 & 620 & 57.900000 & 904 & 46.000000 & 77 & 30.100000 & 125 & 27.000000 & 237 & 25.100000 & 904 & 46.000000 & 0.000000 \\
-Ndrangheta & 85 & 18.600000 & 132 & 18.000000 & 208 & 15.300000 & 327 & 25.000000 & 68 & 23.000000 & 88 & 22.800000 & 113 & 22.200000 & 327 & 25.000000 & 0.000000 \\
-Malasyian Extremists & 59 & 16.900000 & 91 & 17.200000 & 131 & 17.100000 & 232 & 34.800000 & 49 & 20.300000 & 69 & 20.000000 & 92 & 19.400000 & 232 & 34.800000 & 0.000000 \\
-Project Togo & 60 & 21.000000 & 121 & 29.800000 & 190 & 36.600000 & 262 & 44.900000 & 32 & 18.000000 & 82 & 28.300000 & 148 & 33.700000 & 262 & 44.900000 & 0.000000 \\
+\toprule
+{} & \multicolumn{8}{l}{caught\_proportion} & \multicolumn{8}{l}{eigen\_proportion} & unfinished \\
+{} & \multicolumn{2}{l}{0.25} & \multicolumn{2}{l}{0.5} & \multicolumn{2}{l}{0.75} & \multicolumn{2}{l}{1.0} & \multicolumn{2}{l}{0.25} & \multicolumn{2}{l}{0.5} & \multicolumn{2}{l}{0.75} & \multicolumn{3}{l}{1.0} \\
+{} &              mean &   std & mean &   std & mean &   std & mean &   std &             mean &    std & mean &    std & mean &    std & mean & \multicolumn{2}{l}{std} \\
+group                &                   &       &      &       &      &       &      &       &                  &        &      &        &      &        &      &       &            \\
+\midrule
+17N                  &                28 &  13.3 &   44 &  16.0 &   72 &  20.2 &  105 &  26.5 &               23 &   14.9 &   36 &   16.6 &   50 &   18.0 &  105 &  26.5 &        0.0 \\
+9/11 Hijackers       &                98 &  25.5 &  180 &  31.3 &  283 &  38.3 &  415 &  44.8 &               67 &   40.0 &   91 &   44.3 &  131 &   41.0 &  415 &  44.8 &        0.0 \\
+ISIL                 &                54 &  22.2 &  111 &  28.9 &  167 &  35.9 &  226 &  45.7 &               32 &   20.4 &   60 &   25.0 &  136 &   32.0 &  226 &  45.7 &        0.0 \\
+Al Qaeda             &               172 &  31.5 &  375 &  51.4 &  552 &  61.1 &  817 &  70.6 &              274 &  191.5 &  427 &  217.1 &  440 &  213.8 &  817 &  70.6 &        0.4 \\
+Caviar               &               139 &  29.3 &  306 &  38.8 &  574 &  52.9 &  853 &  73.2 &               62 &   21.1 &  124 &   27.8 &  285 &   39.2 &  853 &  73.2 &        0.0 \\
+Operation Acero      &                51 &  24.5 &   89 &  29.9 &  150 &  37.1 &  216 &  47.4 &               33 &   22.9 &   55 &   26.7 &   86 &   30.4 &  216 &  47.4 &        0.0 \\
+Operation Jake       &                65 &  20.3 &  144 &  33.6 &  246 &  46.4 &  339 &  55.4 &               37 &   21.9 &   56 &   22.6 &  154 &   35.9 &  339 &  55.4 &        0.0 \\
+Operation Juanes     &                80 &  25.1 &  152 &  32.9 &  255 &  43.3 &  377 &  58.6 &               61 &   38.7 &   85 &   37.7 &  117 &   39.7 &  377 &  58.6 &        0.0 \\
+Operation Mambo      &                46 &  17.5 &   90 &  22.6 &  151 &  28.8 &  222 &  40.4 &               32 &   18.7 &   57 &   21.1 &   87 &   24.0 &  222 &  40.4 &        0.0 \\
+Heroin Natarjan      &                58 &  18.1 &  103 &  22.0 &  159 &  27.0 &  240 &  35.9 &               42 &   18.6 &   73 &   20.8 &  114 &   23.3 &  240 &  35.9 &        0.0 \\
+Italian Gangs        &               105 &  24.3 &  202 &  32.0 &  342 &  46.7 &  509 &  63.4 &               57 &   24.0 &  123 &   29.5 &  203 &   32.8 &  509 &  63.4 &        0.0 \\
+London Gangs         &                51 &  17.0 &   77 &  17.8 &  118 &  19.6 &  189 &  28.1 &               41 &   17.5 &   55 &   18.4 &   72 &   18.2 &  189 &  28.1 &        0.0 \\
+Mali Terrorists      &                55 &  18.4 &  121 &  28.5 &  178 &  33.6 &  273 &  45.0 &               50 &   25.5 &   94 &   49.3 &  128 &   37.1 &  273 &  45.0 &        0.0 \\
+Montagna Operation   &               150 &  19.3 &  319 &  37.7 &  627 &  58.4 &  904 &  46.0 &               77 &   29.6 &  127 &   25.2 &  239 &   24.9 &  904 &  46.0 &        1.4 \\
+Ndrangheta           &                85 &  18.6 &  132 &  18.0 &  208 &  15.3 &  327 &  25.0 &               68 &   23.0 &   88 &   22.8 &  113 &   22.2 &  327 &  25.0 &        0.0 \\
+Malasyian Extremists &                59 &  16.9 &   91 &  17.2 &  131 &  17.1 &  232 &  34.8 &               49 &   20.3 &   69 &   20.0 &   92 &   19.4 &  232 &  34.8 &        0.0 \\
+Project Togo         &                60 &  21.0 &  121 &  29.8 &  190 &  36.6 &  262 &  44.9 &               32 &   18.0 &   82 &   28.3 &  148 &   33.7 &  262 &  44.9 &        0.0 \\
+\bottomrule
 \end{tabular}
