--- a/final_project/tables/least_central.tex
+++ b/final_project/tables/least_central.tex
@@ -1,23 +1,26 @@
 \begin{tabular}{lrrrrrrrrrrrrrrrrl}
- & \multicolumn{8}{r}{caught_proportion} & \multicolumn{8}{r}{eigen_proportion} & unfinished \\
- & \multicolumn{2}{r}{0.250000} & \multicolumn{2}{r}{0.500000} & \multicolumn{2}{r}{0.750000} & \multicolumn{2}{r}{1.000000} & \multicolumn{2}{r}{0.250000} & \multicolumn{2}{r}{0.500000} & \multicolumn{2}{r}{0.750000} & \multicolumn{2}{r}{1.000000} &  \\
- & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std & mean & std &  \\
-group &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\
-17N & 30 & 14.500000 & 48 & 18.000000 & 77 & 21.000000 & 108 & 24.900000 & 24 & 15.800000 & 39 & 18.100000 & 59 & 20.200000 & 108 & 24.900000 & 0.000000 \\
-9/11 Hijackers & 112 & 28.100000 & 209 & 38.000000 & 311 & 48.400000 & 418 & 55.500000 & 80 & 37.800000 & 170 & 57.100000 & 251 & 59.700000 & 418 & 55.500000 & 0.000000 \\
-ISIL & 60 & 24.600000 & 119 & 33.800000 & 179 & 41.500000 & 240 & 46.900000 & 35 & 20.400000 & 89 & 31.200000 & 157 & 39.200000 & 240 & 46.900000 & 0.000000 \\
-Al Qaeda & 202 & 39.100000 & 426 & 58.400000 & 638 & 69.600000 & 841 & 68.400000 & 423 & 261.100000 & 466 & 269.100000 & 484 & 267.300000 & 841 & 68.400000 & 0.000000 \\
-Caviar & 178 & 33.900000 & 368 & 45.900000 & 596 & 57.700000 & 864 & 68.600000 & 96 & 37.500000 & 214 & 41.600000 & 464 & 51.200000 & 864 & 68.600000 & 0.000000 \\
-Operation Acero & 52 & 20.200000 & 98 & 27.700000 & 146 & 33.900000 & 203 & 40.700000 & 29 & 18.800000 & 71 & 24.600000 & 129 & 33.300000 & 203 & 40.700000 & 0.000000 \\
-Operation Jake & 84 & 28.900000 & 163 & 38.900000 & 253 & 46.800000 & 344 & 52.700000 & 54 & 31.200000 & 101 & 41.400000 & 215 & 45.200000 & 344 & 52.700000 & 0.000000 \\
-Operation Juanes & 101 & 30.300000 & 206 & 42.300000 & 298 & 48.500000 & 398 & 55.400000 & 107 & 68.600000 & 169 & 83.100000 & 250 & 59.800000 & 398 & 55.400000 & 0.000000 \\
-Operation Mambo & 52 & 20.400000 & 105 & 28.600000 & 159 & 34.400000 & 223 & 42.700000 & 41 & 24.900000 & 80 & 32.700000 & 119 & 32.700000 & 223 & 42.700000 & 0.000000 \\
-Heroin Natarjan & 70 & 23.500000 & 120 & 29.300000 & 177 & 33.700000 & 252 & 43.100000 & 50 & 22.200000 & 95 & 27.500000 & 149 & 32.000000 & 252 & 43.100000 & 0.000000 \\
-Italian Gangs & 124 & 30.600000 & 253 & 46.200000 & 370 & 54.200000 & 505 & 62.600000 & 93 & 34.500000 & 224 & 45.800000 & 347 & 54.800000 & 505 & 62.600000 & 0.000000 \\
-London Gangs & 79 & 26.000000 & 124 & 32.800000 & 176 & 33.600000 & 224 & 33.500000 & 74 & 28.800000 & 109 & 38.400000 & 153 & 45.000000 & 224 & 33.500000 & 0.000000 \\
-Mali Terrorists & 66 & 23.900000 & 132 & 31.700000 & 204 & 40.200000 & 275 & 45.800000 & 70 & 40.800000 & 116 & 55.000000 & 162 & 53.300000 & 275 & 45.800000 & 0.000000 \\
-Montagna Operation & 204 & 35.700000 & 413 & 48.500000 & 627 & 52.100000 & 925 & 52.500000 & 122 & 43.700000 & 260 & 56.700000 & 477 & 58.400000 & 925 & 52.500000 & 0.000000 \\
-Ndrangheta & 113 & 25.500000 & 202 & 29.600000 & 283 & 32.400000 & 377 & 35.900000 & 108 & 48.100000 & 177 & 52.300000 & 266 & 37.200000 & 377 & 35.900000 & 0.000000 \\
-Malasyian Extremists & 93 & 26.000000 & 154 & 29.800000 & 221 & 33.300000 & 276 & 37.300000 & 85 & 26.800000 & 135 & 30.000000 & 218 & 34.600000 & 276 & 37.300000 & 0.000000 \\
-Project Togo & 69 & 24.700000 & 135 & 32.900000 & 200 & 38.800000 & 280 & 46.000000 & 46 & 23.800000 & 114 & 32.200000 & 189 & 37.900000 & 280 & 46.000000 & 0.000000 \\
+\toprule
+{} & \multicolumn{8}{l}{caught\_proportion} & \multicolumn{8}{l}{eigen\_proportion} & unfinished \\
+{} & \multicolumn{2}{l}{0.25} & \multicolumn{2}{l}{0.5} & \multicolumn{2}{l}{0.75} & \multicolumn{2}{l}{1.0} & \multicolumn{2}{l}{0.25} & \multicolumn{2}{l}{0.5} & \multicolumn{2}{l}{0.75} & \multicolumn{3}{l}{1.0} \\
+{} &              mean &   std & mean &   std & mean &   std & mean &   std &             mean &    std & mean &    std & mean &    std & mean & \multicolumn{2}{l}{std} \\
+group                &                   &       &      &       &      &       &      &       &                  &        &      &        &      &        &      &       &            \\
+\midrule
+17N                  &                30 &  14.5 &   48 &  18.0 &   77 &  21.0 &  108 &  24.9 &               24 &   15.8 &   39 &   18.1 &   59 &   20.2 &  108 &  24.9 &        0.0 \\
+9/11 Hijackers       &               112 &  28.1 &  209 &  38.0 &  311 &  48.4 &  418 &  55.5 &               80 &   37.8 &  170 &   57.1 &  251 &   59.7 &  418 &  55.5 &        0.0 \\
+ISIL                 &                60 &  24.6 &  119 &  33.8 &  179 &  41.5 &  240 &  46.9 &               35 &   20.4 &   89 &   31.2 &  157 &   39.2 &  240 &  46.9 &        0.0 \\
+Al Qaeda             &               204 &  40.3 &  429 &  61.1 &  643 &  74.3 &  841 &  68.4 &              426 &  264.4 &  469 &  272.4 &  486 &  270.4 &  841 &  68.4 &        3.0 \\
+Caviar               &               180 &  35.7 &  374 &  50.2 &  607 &  67.9 &  864 &  68.6 &               96 &   38.2 &  216 &   43.6 &  471 &   57.3 &  864 &  68.6 &        9.0 \\
+Operation Acero      &                52 &  20.2 &   98 &  27.7 &  146 &  33.9 &  203 &  40.7 &               29 &   18.8 &   71 &   24.6 &  129 &   33.3 &  203 &  40.7 &        0.0 \\
+Operation Jake       &                84 &  28.9 &  163 &  38.9 &  253 &  46.8 &  344 &  52.7 &               54 &   31.2 &  101 &   41.4 &  215 &   45.2 &  344 &  52.7 &        0.0 \\
+Operation Juanes     &               101 &  30.3 &  206 &  42.3 &  298 &  48.5 &  398 &  55.4 &              107 &   68.6 &  169 &   83.1 &  250 &   59.8 &  398 &  55.4 &        0.0 \\
+Operation Mambo      &                52 &  20.4 &  105 &  28.6 &  159 &  34.4 &  223 &  42.7 &               41 &   24.9 &   80 &   32.7 &  119 &   32.7 &  223 &  42.7 &        0.0 \\
+Heroin Natarjan      &                70 &  23.5 &  120 &  29.3 &  177 &  33.7 &  252 &  43.1 &               50 &   22.2 &   95 &   27.5 &  149 &   32.0 &  252 &  43.1 &        0.0 \\
+Italian Gangs        &               124 &  30.6 &  253 &  46.2 &  370 &  54.2 &  505 &  62.6 &               93 &   34.5 &  224 &   45.8 &  347 &   54.8 &  505 &  62.6 &        0.0 \\
+London Gangs         &                79 &  26.0 &  124 &  32.8 &  176 &  33.6 &  224 &  33.5 &               74 &   28.8 &  109 &   38.4 &  153 &   45.0 &  224 &  33.5 &        0.0 \\
+Mali Terrorists      &                66 &  23.9 &  132 &  31.7 &  204 &  40.2 &  275 &  45.8 &               70 &   40.8 &  116 &   55.0 &  162 &   53.3 &  275 &  45.8 &        0.0 \\
+Montagna Operation   &               216 &  41.6 &  435 &  57.4 &  661 &  68.8 &  925 &  52.5 &              130 &   48.1 &  275 &   62.8 &  503 &   66.9 &  925 &  52.5 &       36.8 \\
+Ndrangheta           &               113 &  25.5 &  202 &  29.6 &  283 &  32.4 &  377 &  35.9 &              108 &   48.1 &  177 &   52.3 &  266 &   37.2 &  377 &  35.9 &        0.0 \\
+Malasyian Extremists &                93 &  26.0 &  154 &  29.8 &  221 &  33.3 &  276 &  37.3 &               85 &   26.8 &  135 &   30.0 &  218 &   34.6 &  276 &  37.3 &        0.0 \\
+Project Togo         &                69 &  24.7 &  135 &  32.9 &  200 &  38.8 &  280 &  46.0 &               46 &   23.8 &  114 &   32.2 &  189 &   37.9 &  280 &  46.0 &        0.0 \\
+\bottomrule
 \end{tabular}
